Remvoe z-index: -10 which prevented any links from being clicked

--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,6 @@ body {
   top: 50%;
   transform: translateY(-50%);
   width: 100%;
-  z-index: -10;
 }
 
 .external-links a {
